update code for new figures

--- a/notebooks/eda_cpu.ipynb
+++ b/notebooks/eda_cpu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "sns.set_style(\"ticks\")\n",
     "\n",
     "sns.set_context(\"paper\")\n",
-    "base_dir = Path().cwd()\n"
+    "base_dir = Path().cwd().parent\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "0  52.565217  52.217391  52.26087"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "0  52.130435  52.782609  52.681818"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.608695652173914"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +391,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -398,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +461,7 @@
        "0  62.826087  61.304348      64.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +520,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -527,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +590,7 @@
        "0  64.521739  59.826087  61.173913"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +656,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -663,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +726,7 @@
        "0  50.304348  49.869565  50.130435"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +778,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -785,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +848,7 @@
        "0  50.26087  49.869565  50.086957"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +929,7 @@
        "2  Period 3     52.260870"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2901,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3929,7 +3947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -5238,7 +5256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -5290,29 +5308,29 @@
          ],
          "xaxis": "x",
          "y": [
-          96,
-          97,
-          95,
-          96,
-          96,
-          97,
-          96,
-          96,
-          97,
-          96,
-          96,
-          96,
-          96,
-          95,
-          96,
-          96,
-          96,
-          96,
-          96,
-          97,
-          96,
-          95,
-          96
+          4,
+          3,
+          5,
+          4,
+          4,
+          3,
+          4,
+          4,
+          3,
+          4,
+          4,
+          4,
+          4,
+          5,
+          4,
+          4,
+          4,
+          4,
+          4,
+          3,
+          4,
+          5,
+          4
          ],
          "yaxis": "y"
         },
@@ -5358,29 +5376,29 @@
          ],
          "xaxis": "x",
          "y": [
-          96,
-          97,
-          96,
-          96,
-          96,
-          96,
-          96,
-          96,
-          96,
-          96,
-          96,
-          96,
-          97,
-          96,
-          95,
-          96,
-          97,
-          96,
-          96,
-          96,
-          96,
-          96,
-          96
+          4,
+          3,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          3,
+          4,
+          5,
+          4,
+          3,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4
          ],
          "yaxis": "y"
         },
@@ -5426,29 +5444,29 @@
          ],
          "xaxis": "x",
          "y": [
-          97,
-          96,
-          95,
-          96,
-          97,
-          96,
-          94,
-          95,
-          96,
-          98,
-          95,
-          94,
-          93,
-          94,
-          95,
-          96,
-          98,
-          94,
-          95,
-          91,
-          93,
-          93,
-          97
+          3,
+          4,
+          5,
+          4,
+          3,
+          4,
+          6,
+          5,
+          4,
+          2,
+          5,
+          6,
+          7,
+          6,
+          5,
+          4,
+          2,
+          6,
+          5,
+          9,
+          7,
+          7,
+          3
          ],
          "yaxis": "y"
         },
@@ -5494,29 +5512,29 @@
          ],
          "xaxis": "x",
          "y": [
-          95,
-          95,
-          94,
-          95,
-          97,
-          98,
-          96,
-          95,
-          97,
-          94,
-          96,
-          98,
-          95,
-          94,
-          96,
-          95,
-          95,
-          97,
-          96,
-          97,
-          94,
-          97,
-          94
+          5,
+          5,
+          6,
+          5,
+          3,
+          2,
+          4,
+          5,
+          3,
+          6,
+          4,
+          2,
+          5,
+          6,
+          4,
+          5,
+          5,
+          3,
+          4,
+          3,
+          6,
+          3,
+          6
          ],
          "yaxis": "y"
         },
@@ -5562,29 +5580,29 @@
          ],
          "xaxis": "x",
          "y": [
-          99,
-          98,
-          98,
-          99,
-          99,
-          99,
-          99,
-          98,
-          98,
-          98,
-          99,
-          99,
-          99,
-          99,
-          99,
-          98,
-          99,
-          99,
-          99,
-          99,
-          98,
-          99,
-          98
+          1,
+          2,
+          2,
+          1,
+          1,
+          1,
+          1,
+          2,
+          2,
+          2,
+          1,
+          1,
+          1,
+          1,
+          1,
+          2,
+          1,
+          1,
+          1,
+          1,
+          2,
+          1,
+          2
          ],
          "yaxis": "y"
         },
@@ -5630,29 +5648,29 @@
          ],
          "xaxis": "x",
          "y": [
-          98,
-          99,
-          99,
-          99,
-          99,
-          99,
-          98,
-          99,
-          99,
-          99,
-          99,
-          98,
-          98,
-          98,
-          98,
-          99,
-          99,
-          99,
-          97,
-          98,
-          99,
-          98,
-          98
+          2,
+          1,
+          1,
+          1,
+          1,
+          1,
+          2,
+          1,
+          1,
+          1,
+          1,
+          2,
+          2,
+          2,
+          2,
+          1,
+          1,
+          1,
+          3,
+          2,
+          1,
+          2,
+          2
          ],
          "yaxis": "y"
         }
@@ -6518,7 +6536,7 @@
     "def transform_data(df, type_name):\n",
     "    df[\"Type\"] = type_name\n",
     "    df = df[[\"Type\", \"id\"]].rename(columns={\"id\": \"CPU Used (%)\"})\n",
-    "    df[\"Memory Used (GB)\"] = 100 - df[\"CPU Used (%)\"] \n",
+    "    df[\"CPU Used (%)\"] = 100 - df[\"CPU Used (%)\"] \n",
     "    df[\"Seconds\"] = seconds \n",
     "    return df\n",
     "\n",
@@ -6570,26 +6588,6 @@
     "fig = px.line(df_all_cpu_idle, x=\"Seconds\", y=\"CPU Used (%)\", color=\"Type\")\n",
     "\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(23, 4)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ec2_nginx_cpu_idle.shape"
    ]
   }
  ],
